--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <a href="./recipes/turkey-casserole.html">
         Turkey Casserole
     </a>
+    
+    <p>
+        <img src="./images/casserole.jpg">
+    </p>
 </body>
 
 
