--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-    
+    <h1>
+        Turkey Casserole
+    </h1>
 
+    <p>
+        <img src="./images/casserole.jpg">
+    </p>
 </body>
 
 
