Added headings and description to casserole page

--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -5,19 +5,40 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Turkey Casserole Instructions
+        Turkey Casserole Description
     </title>
 
 </head>
 
 <body>
     <h1>
-        Turkey Casserole
+        Comforting Turkey Casserole
     </h1>
 
     <p>
-        <img src="./images/casserole.jpg">
+        <img src="../images/casserole.jpg">
     </p>
+
+    <h2>
+        Recounting
+    </h2>
+
+    <p>
+        A <strong>casserole</strong> or <em>"hot dish"</em> is a baked food 
+        with pieces of meat like chicken, various vegetables, and a starchy
+        binder like flour, potato, or pasta. There is also often a crunchy 
+        or cheesy topping. 
+    </p>
+    <p>
+        This kind of <em>baked food</em> is usually served as a 
+        <strong>main course</strong> or <strong>side 
+        dish</strong> and can be served in the same dish that it was cooked in.
+    </p>
+
+    <h2>
+        Necessary Ingredients
+    </h2>
+    
 </body>
 
 
