Changed computers and added ingredients

--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -38,7 +38,27 @@
     <h2>
         Necessary Ingredients
     </h2>
+
+    <ul>
+        <li>Two-third cups panko</li>
+        <li>Three-fourth cups freshly grated Parmesan, divided</li>
+        <li>SIx tablespoons butter, divided, plus more for pan</li>
+        <li>Kosher salt</li>
+        <li>One chopped small yellow onion</li>
+        <li>One and one-fourth cups sliced cremini mushrooms</li>
+        <li>One fourth cup all-purpose flour</li>
+        <li>Four cups low-sodium chicken stock</li>
+        <li>Two cups shredded cheddar</li>
+        <li>Three cups cubed cooked turkey</li>
+        <li>Eight-ounce cooked egg noodles</li>
+        <li>One cup frozen peas</li>
+        <li>Three tablespoons freshly chopped parsley</li>
+        <li>Garnish</li>
+        <li>One tablespoon lemon juice</li>
+        <li>Freshly-ground black pepper</li>
+    </ul>
     
+    <h2></h2>
 </body>
 
 
