Added instructions on laptop

--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -58,7 +58,35 @@
         <li>Freshly-ground black pepper</li>
     </ul>
     
-    <h2></h2>
+    <h2>
+        Step-by-Step Cooking Instrutions
+    </h2>
+
+    <ol>
+        <li>Preheat your oven to 425 degrees. In a medium bowl, 
+            combine panko with one fourth cup Parmesan,
+            and three tablespoons of butter. Season with salt.</li>
+
+        <li>In a medium saucepan over medium-high heat, melt 
+            remaining three tablespoons butter. Add onion and mushrooms
+            and season with salt. COok, stirring until softened, about
+            six minutes. Add flour and cook, stirring, one minute
+            more. Pour stock into saucepan and bring to a boil.</li>
+
+        <li>Reduce heat to medium-low and simmer, stirring, until 
+            thickened, about five minutes. Remove from heat and
+            stir in cheddar and remaining one half cup Parmesan
+            until melted.</li>
+
+        <li>Add turkey, noodles, peas, parsley, and lemon juice 
+            to the saucepan and season with salt and pepper.</li>
+
+        <li>Brush a 9" x 13" baking dish with butter and scrape turkey
+            casserole mixture into dish. Top with buttered breadcrumbs.
+            Bake until golden and bubbling, about twenty minutes.</li>
+        
+        <li>Top with more parsley before serving.</li>
+    </ol>
 </body>
 
 
