Small formatting changes

--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -63,7 +63,7 @@
     </h2>
 
     <ol>
-        <li>Preheat your oven to 425 degrees. In a medium bowl, 
+        <li>Preheat your oven to <em>425</em> degrees. In a medium bowl, 
             combine panko with one fourth cup Parmesan,
             and three tablespoons of butter. Season with salt.</li>
 
@@ -81,7 +81,7 @@
         <li>Add turkey, noodles, peas, parsley, and lemon juice 
             to the saucepan and season with salt and pepper.</li>
 
-        <li>Brush a 9" x 13" baking dish with butter and scrape turkey
+        <li>Brush a <em>9</em>" x <em>13</em>" baking dish with butter and scrape turkey
             casserole mixture into dish. Top with buttered breadcrumbs.
             Bake until golden and bubbling, about twenty minutes.</li>
         
