Added image to tonkotsu page and improved titles for index and subsequent pages

--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -4,10 +4,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Creamy and Comforting Tonkotsu Ramen</title>
+    <title>Tonkotsu Ramen</title>
 </head>
 
 <body>
+
+    <h1>
+        <u>
+            Creamy and Comforting Tonkotsu Ramen
+        </u>
+    </h1>
+
+    <img src="../images/tonkotsu.jpg">
 
     <h2>
         <strong>
@@ -128,7 +136,7 @@
         </em>
     </h3>
 
-    
+
     <ol>
         <li>COmbine all the ingredients in a small sauce pan. Simmer at
             the lowest setting for about an hour. Top up with a bit of chicken
