Formatted all 3 recipe files and added nutritional labels

--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -22,14 +22,16 @@
     </p>
 
     <h2>
-        Recounting
+        <strong>
+            Recounting
+        </strong>
     </h2>
 
     <p>
-        A <strong>casserole</strong> or <em>"hot dish"</em> is a baked food 
-        with pieces of meat like chicken, various vegetables, and a starchy
-        binder like flour, potato, or pasta. There is also often a crunchy 
-        or cheesy topping. 
+        A <strong>casserole</strong> or <em>"hot dish"</em> is a <a href="https://en.wikipedia.org/wiki/Category:Baked_foods">
+        baked food</a> with pieces of meat like chicken, various vegetables,
+        and a starchy binder like flour, potato, or pasta. There is 
+        also often a crunchy or cheesy topping. 
     </p>
     <p>
         This kind of <em>baked food</em> is usually served as a 
@@ -38,7 +40,9 @@
     </p>
 
     <h2>
+        <strong>
         Necessary Ingredients
+        </strong>
     </h2>
 
     <ul>
@@ -61,7 +65,9 @@
     </ul>
     
     <h2>
-        Step-by-Step Cooking Instrutions
+        <strong>
+            Step-by-Step Cooking Instrutions
+        </strong>
     </h2>
 
     <ol>
@@ -91,6 +97,125 @@
     </ol>
 </body>
 
+<section class="performance-facts">
+    <header class="performance-facts__header">
+      <h1 class="performance-facts__title"><strong>Nutrition Facts</strong></h1>
+      <p>Serving Size:
+        </p>
+            <p>1 serving</p> 
+                <p>Servings Per Recipe: 6</p>
+            </header>
+            <table class="performance-facts__table">
+              <thead>
+                <tr>
+                  <th colspan="3" class="small-info">
+                    Amount Per Serving
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th colspan="2">
+                    <strong>Calories:</strong>
+                    299.5
+                    <tr class="thick-row">
+                        <th>
+                        <td colspan="2">
+                          <p><strong>% Daily Value</strong></p>
+                        </td>
+                    </th>
+                      </tr>
+                      <tr>
+                        <th colspan="2">
+                          <strong>Total Fat</strong>
+                          9.3g
+                        </th>
+                      </tr>
+                      <tr>
+                        <td class="blank-cell" class="small-info">
+                        </td>
+                        <th>
+                          Saturated Fat
+                            5.0g
+                        </th>
+                      </tr>
+                      <tr>
+                        <td class="blank-cell">
+                        </td>
+                        <th>
+                          Polyunsaturated Fat
+                          1.1g
+                        </th>
+                        <td>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="blank-cell">
+                        </td>
+                        <th>
+                          Monounsaturated Fat
+                          0.8g
+                        </th>
+                        <td>
+                        </td>
+                    </tr>
+                      <tr>
+                        <th colspan="2">
+                          <strong>Cholesterol</strong>
+                          70.9mg
+                        </th>
+                      </tr>
+                      <tr>
+                        <th colspan="2">
+                          <strong>Sodium</strong>
+                          709.6mg
+                        </th>
+                      </tr>
+                      <tr>
+                        <th colspan="2">
+                          <strong>Total Carbohydrate</strong>
+                          27.4g
+                        </th>
+                      </tr>
+                      <tr>
+                        <td class="blank-cell">
+                        </td>
+                        <th>
+                          Dietary Fiber
+                          1.7g
+                        </th>
+                      </tr>
+                      <tr>
+                        <td class="blank-cell">
+                        </td>
+                        <th>
+                          Sugars
+                          1.9g
+                        </th>
+                        <td>
+                        </td>
+                      </tr>
+                      <tr class="thick-end">
+                        <th colspan="2">
+                          <strong>Protein</strong>
+                          24.6g
+                        </th>
+                      </tr>
+                      <tr class="thick-end">
+                        <th colspan="2">
+                          <strong>Potassium</strong>
+                          220.2g
+                        </th>
+                        <td>
+                            <strong>5%</strong>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  
+                  <p class="small-info">*The % Daily Value (DV) tells you how much a 
+                    nutrient in a serving of food contributes to a daily diet. 2000 
+                    calories a day is used for general nutrition advice.</p>
 
 
 
