--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -27,7 +27,10 @@
         Tonkotsu ramen is a popular ramen dish which originated in Kurume, 
         Fukuoka Prefecture, which is located on the northern shore of 
         Kyushu island in Japan. It was originally prepared as an affordable 
-        fast food which was easily prepared for laborers at fish markets.
+        <a href="https://en.wikipedia.org/wiki/Fast_food">fast food</a> which was easily prepared for laborers at fish markets.
+    </p>
+
+    <p>
         Now, it serves as a comfortable, warming, and <strong><em>hearty meal</em></strong> for all
         demographics.
     </p>
@@ -138,7 +141,7 @@
 
 
     <ol>
-        <li>COmbine all the ingredients in a small sauce pan. Simmer at
+        <li>Combine all the ingredients in a small sauce pan. Simmer at
             the lowest setting for about an hour. Top up with a bit of chicken
             stock if needed.
         </li>
@@ -202,7 +205,7 @@
                 </strong>
             </ul>
         <li>Cook the mushrooms along side the noodles - you just want them softened.</li>
-        <li>Gently fry the chashu pork in a non-stick skillet until lightly browned.</li>
+        <li>Gently fry the chashu psork in a non-stick skillet until lightly browned.</li>
         <li>Place 1/4 of whichever tare you are using in the bottom of four bowls.</li>
         <li>Ladle in about 1/2 cup of the tonkotsu broth into each of the bowls and stir to mix.</li>
         <li>Add the noodles.</li>
@@ -211,5 +214,156 @@
 
     </ol>
 
+   
+
+    <section class="performance-facts">
+        <header class="performance-facts__header">
+          <h1 class="performance-facts__title"><strong>Nutrition Facts</strong></h1>
+          <p>Serving Size:
+            </p>
+                <p>1 bowl (about 568g)</p> 
+                    <p>Serving Per Container 1</p>
+                </header>
+                <table class="performance-facts__table">
+                  <thead>
+                    <tr>
+                      <th colspan="3" class="small-info">
+                        Amount Per Serving
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th colspan="2">
+                        <strong>Calories:</strong>
+                        656
+                        <tr class="thick-row">
+                            <td colspan="3" class="small-info">
+                              <strong>% Daily Value*</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th colspan="2">
+                              <strong>Total Fat</strong>
+                              22g
+                            </th>
+                            <td>
+                              <strong>28%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Saturated Fat
+                              4.7g
+                            </th>
+                            <td>
+                              <strong>24%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Trans Fat
+                              0.2g
+                            </th>
+                            <td>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Polyunsaturated Fat
+                              7.1g
+                            </th>
+                            <td>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Monounsaturated Fat
+                              7.1g
+                            </th>
+                            <td>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th colspan="2">
+                              <strong>Cholesterol</strong>
+                              249mg
+                            </th>
+                            <td>
+                              <strong>83%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th colspan="2">
+                              <strong>Sodium</strong>
+                              1249mg
+                            </th>
+                            <td>
+                              <strong>54%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th colspan="2">
+                              <strong>Total Carbohydrate</strong>
+                              62g
+                            </th>
+                            <td>
+                              <strong>23%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Dietary Fiber
+                              3.7g
+                            </th>
+                            <td>
+                              <strong>13%</strong>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="blank-cell">
+                            </td>
+                            <th>
+                              Sugars
+                              4.9g
+                            </th>
+                            <td>
+                            </td>
+                          </tr>
+                          <tr class="thick-end">
+                            <th colspan="2">
+                              <strong>Protein</strong>
+                              49g
+                            </th>
+                            <td>
+                                <strong>17%</strong>
+                            </td>
+                          </tr>
+                          <tr class="thick-end">
+                            <th colspan="2">
+                              <strong>Potassium</strong>
+                              821.9g
+                            </th>
+                            <td>
+                                <strong>17%</strong>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      
+                      <p class="small-info">* Percent Daily Values are based on a 2,000 calorie 
+                        diet. Your daily values may be higher or lower depending on your 
+                        calorie needs:</p>
 </body>
+
 </html>
