--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tonkotsu Ramen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
