Fixed CSS issues and formatted index page along with color-coded links to recipes

--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Project Recipes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 
-    <h1>
+    <h1 class="main-title">
         Odin Recipes
     </h1>
 
     <ul>
     
-    <a href="./recipes/turkey-casserole.html">
+    <a class="page-link first" href="./recipes/turkey-casserole.html">
         Turkey Casserole
     </a>
 
     <p>
-        <a href="./recipes/chicken-quesadilla.html">
+        <a class="page-link second" href="./recipes/chicken-quesadilla.html">
         Chicken Quesadilla
     </a>
     </p>
     
     <p>
-        <a href="./recipes/tonkotsu-ramen.html">
+        <a class="page-link third" href="./recipes/tonkotsu-ramen.html">
         Tonkotsu Ramen
     </a>
     </p>
