--- a/recipes/turkey-casserole.html
+++ b/recipes/turkey-casserole.html
@@ -7,7 +7,7 @@
     <title>
         Turkey Casserole Description
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
